@@ -1,7 +1,7 @@
 Package: smacof
 Type: Package
 Title: Multidimensional Scaling
-Version: 1.8-11
+Version: 1.8-12
 Date: 2016-03-20
 Authors@R: c(person("Patrick", "Mair", role = c("aut", "cre"), email = "mair@fas.harvard.edu"), person("Jan", "De Leeuw", role = "aut"), person("Ingwer", "Borg", role = "ctb"), person("Patrick J. F.", "Groenen", role = "ctb"))
 Author: Patrick Mair [aut, cre], Jan De Leeuw [aut], Ingwer Borg [ctb], Patrick  J. F. Groenen [ctb]
@@ -9,7 +9,7 @@ Maintainer: Patrick Mair <mair@fas.harvard.edu>
 Description: Provides the following approaches for multidimensional scaling (MDS) based on stress minimization by means of majorization (smacof): basic MDS on symmetric dissimilarity matrices,
     MDS with external constraints on the configuration, individual difference scaling (idioscal, indscal, and friends), MDS with spherical restrictions, and unfolding. The MDS type can be ratio, interval, ordinal, and monotone splines. 
     Various tools and extensions like jackknife MDS, permutation tests, gravity models, inverse MDS, unidimensional scaling, classical scaling, and Procrustes. 
-Imports: graphics, stats, polynom, Hmisc, colorspace, nnls, grDevices, MASS
+Imports: graphics, stats, polynom, Hmisc, colorspace, nnls, grDevices, MASS, weights
 Depends: R (>= 3.0.2)
 License: GPL-3
 Suggests: knitr, RgoogleMaps, plotrix
