@@ -1,5 +1,5 @@
 useDynLib("smacof")
-import("stats", "graphics", "Hmisc", "colorspace", "polynom", "nnls", "MASS")
+import("stats", "graphics", "Hmisc", "colorspace", "polynom", "nnls", "MASS", "weights")
 importFrom("grDevices", "dev.new", "hcl")
 export(smacofSym)
 export(smacofRect)
@@ -23,6 +23,7 @@ export(driftVectors)
 export(symdecomp)
 export(fitCircle)
 export(biplotmds)
+export(dissWeights)
 
 S3method(print, smacofB)
 S3method(summary, smacofB)
